--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ BugReports: https://github.com/daattali/undomanager/issues
 Depends:
     R (>= 3.0.0)
 Imports:
+    checkmate,
     R6
 License: MIT + file LICENSE
 Encoding: UTF-8
